# moonstone

./: .clippy.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: args.rs  config.rs  lib.rs  main.rs  project.rs
src/cache/: mod.rs  repo.rs  reset.rs
src/config/: file.rs
src/dotfiles/: config.rs  first_run.rs  mod.rs
src/project/: compile.rs  file.rs  generation.rs  mod.rs  run.rs
src/replace/: replacer.rs
src/testing/: config.rs  generate.rs  generation.rs  mod.rs  runner.rs  test.rs  test_result.rs  testcase.rs
src/utils/: macros.rs
