[package]
name = "moonstone"
description = "A simple async algorithm test suite"
version = "1.0.0"
edition = "2021"
authors = [ "peony" ]
readme = "README.md"
repository = "https://github.com/peonii/moonstone/"
license = "MIT"
keywords = ["algorithm", "testing", "contest"]

[[bin]]
name = "mst"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
futures = "0.3.24"
home = "0.5.3"
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.85"
serde_yaml = "0.9.13"
tokio = { version = "1.21.1", features = ["full"] }
