[package]
name = "moonstone"
version = "0.1.0"
edition = "2021"
authors = [ "peony" ]
repository = "https://github.com/peonii/moonstone/"
license = "MIT"
keywords = ["algorithm", "testing", "contest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mst"
path = "src/main.rs"

[dependencies]
