[package]
name = "moonstone"
version = "0.1.0"
edition = "2021"
authors = [ "peony" ]
repository = "https://github.com/peonii/moonstone/"
license = "MIT"
keywords = ["algorithm", "testing", "contest"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mst"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.24"
git2 = "0.15.0"
hex = "0.4.3"
home = "0.5.4"
indicatif = "0.17.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sha2 = "0.10.6"
tokio = { version = "1.21.2", features = [ "full" ] }
toml = "0.5.9"
